K8/juicy/deployment-w-loadbalancer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: juicy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juicy-deployment
  namespace: juicy
  labels:
    app: juicy
spec:
  selector:
    matchLabels:
      app: juicy
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: juicy
    spec:
      containers:
        - name: juice
          image: bkimminich/juice-shop
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service-juicy
  namespace: juicy
spec:
  selector:
    app: juicy
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
