K8/juicy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juicy-ingress
  namespace: juicy
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: juicy-test.io
      http:
        paths:
        - path: /juicy
          pathType: Prefix
          backend:
            service:
              name: service-juicy
              port: 
                number: 3000 
                      
        - path: /dvwa
          pathType: Prefix
          backend:
            service:
              name: service-dvwa
              port: 
                number: 3010
